--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -7,7 +7,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 h1.title {
-    text-align: center;
+    text-align: center; 
     margin: 10px 0;
 }
 .container {
@@ -19,36 +19,88 @@ h1.title {
     margin-left: -15px;
 }
 .section {
-    border: 3px solid #000;
+    position: relative;
+    border: 1px solid #000;
     margin: 5px 10px;
 
 }
 .section-title {
-    position: relative;
-    float: right;
+    position: absolute;
+    top: 0;
+    right: 0;
     padding: 5px 35px;
-    border-left: 1px solid;
-    border-bottom: 1px solid;
+    text-align: center;
+    font-weight: bold;
+    border-left: 1px solid #000;
+    border-bottom: 1px solid #000;
 }
 .bg-pink {
-    background-color: pink;
+    background-color: #d59898;
 }
 .bg-red {
-    background-color: red;
+    background-color: #c14543;
+    color: #fff;
 }
 .bg-yellow {
-    background-color: yellow;
+    background-color: #e5d198;
 }
 .section-content {
-    padding: 10px;
+    padding: 30px 5px;
+    background-color: #bfbfbf;
 }
-/* Hint: use percentages to define width and use the 'float' property. */
+.border {
+    border: 3px solid;
+}
+/********** Large devices only **********/
 @media (min-width: 992px){
-    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
         float: left;
         position: relative;
         padding-right: 15px;
         padding-left: 15px;
+    }
+    .col-lg-1 {
+        width: 8.33%;
+    }
+    .col-lg-2 {
+        width: 16.66%;
+    }
+    .col-lg-3 {
+        width: 25%;
+    }
+    .col-lg-4 {
+        width: 33.33%;
+    }
+    .col-lg-5 {
+        width: 41.66%;
+    }
+    .col-lg-6 {
+        width: 50%;
+    }
+    .col-lg-7 {
+        width: 58.33%;
+    }
+    .col-lg-8 {
+        width: 66.66%;
+    }
+    .col-lg-9 {
+        width: 74.99%;
+    }
+    .col-lg-10 {
+        width: 83.33%;
+    }
+    .col-lg-11 {
+        width: 91.66%;
+    }
+    .col-lg-12 {
+        width: 100%;
+    }
+}
+/********** Medium devices only **********/
+@media (min-width: 768px) and (max-width: 991px){
+    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+        float: left;
+        position: relative;
     }
     .col-md-1 {
         width: 8.33%;
@@ -87,7 +139,8 @@ h1.title {
         width: 100%;
     }
 }
-@media (min-width: 768px) and (max-width: 991px){
+/********** Mobile only **********/
+@media (max-width: 767px){
     .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
         float: left;
         position: relative;
@@ -126,48 +179,6 @@ h1.title {
         width: 91.66%;
     }
     .col-sm-12 {
-        width: 100%;
-    }
-}
-@media (max-width: 767px){
-    .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
-        float: left;
-        position: relative;
-    }
-    .col-xs-1 {
-        width: 8.33%;
-    }
-    .col-xs-2 {
-        width: 16.66%;
-    }
-    .col-xs-3 {
-        width: 25%;
-    }
-    .col-xs-4 {
-        width: 33.33%;
-    }
-    .col-xs-5 {
-        width: 41.66%;
-    }
-    .col-xs-6 {
-        width: 50%;
-    }
-    .col-xs-7 {
-        width: 58.33%;
-    }
-    .col-xs-8 {
-        width: 66.66%;
-    }
-    .col-xs-9 {
-        width: 74.99%;
-    }
-    .col-xs-10 {
-        width: 83.33%;
-    }
-    .col-xs-11 {
-        width: 91.66%;
-    }
-    .col-xs-12 {
         width: 100%;
     }
 
